--- a/cloudmusic/.settings/org.eclipse.wst.common.component
+++ b/cloudmusic/.settings/org.eclipse.wst.common.component
@@ -6,6 +6,6 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <property name="java-output-path" value="/cloudmusic/target/classes"/>
-        <property name="context-root" value="cloudmusic"/>
+        <property name="context-root" value="ssm-template"/>
     </wb-module>
 </project-modules>
